Added addbot button and updated the UI

--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -23,7 +23,7 @@
         </div><br>
         <div class="col-12">
           <button class="btn btn-primary" type="submit">I Understand And Delete</button>
-          <a href="/bot/<%= botid.botid %>" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Cancel</a>
+          <a class="btn btn-primary" href="/bot/<%= botid.botid %>" role="button">Cancel</a>
         </div><br>
       </form></center>
   </body>
