--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -1,3 +1,6 @@
+ <%- include('./templates/header.ejs') %>
+ <%- include('./templates/nav.ejs') %> 
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,8 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <%- include("templates/header") %>
 
-    <title>Deleting.. | <%= botid.botname %></title>
+    <title>Discord Lists | Deleting <%= botid.botname %></title>
   </head>
   <body>
     <u><center><h1>Your are going to delete <%= botid.botname %> bot</h1></center></u><br><br><br><br><br><br><br><br>
