--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,3 +1,6 @@
+ <%- include('./templates/header.ejs') %>
+ <%- include('./templates/nav.ejs') %> 
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,8 +13,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <%- include("templates/header") %>
 
-    <title>Editing | <%= botid.botname %></title>
+    <title>Discord Lists | Editing <%= botid.botname %></title>
   </head>
   <body>
     <u><center><h1>Editing <%= botid.botname %></h1></center></u><br>
