--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,3 +1,6 @@
+ <%- include('./templates/header.ejs') %>
+ <%- include('./templates/nav.ejs') %> 
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,8 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <%- include("templates/header") %>
 
-    <title>Hello, world!</title>
+    <title>Discord Lists | Bot Added</title>
   </head>
   <body>
       <center><h1>Success. You've added your bot to our list and it's waiting for approval</h1></center>
