--- a/views/error.ejs
+++ b/views/error.ejs
@@ -21,5 +21,8 @@
   </head>
   <body>
       <h1>Error</h1>
-  </body>
-</html>
+      <br><br><img src="https://cdn.dribbble.com/users/156243/screenshots/3626759/something_went_wrong.png" style="
+    display: block;
+    margin: auto;
+"><br><br>
+ <%- include('./templates/footer.ejs') %> 
