--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 
  <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
-
+<br><Br>
+<img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?" class="top-img"/>
+<br>
 <h1>Discord Lists</h1>
 <br>
 <p>The history of Discord Bots!</p>
 <br>
+<hr>
+<br><br><Br>
 
     <h2 class="heading">Certified Bots</h2><br><br>
     <div class="container">
@@ -70,6 +74,6 @@
       <% }); %>
      <% } %>
     </div>
-<br><br><br><br><br>
+<br><br><br><br><hr><br>
       
  <%- include('./templates/footer.ejs') %> 
