--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -22,9 +22,25 @@
 					<a href="/invite">Discord</a>
 
 					<a href="/about">About Us</a>
+
+          <a href="/login">Add your Bot</a>
 				</p>
 
 				<p id="copyright">Discord Lists &copy; 2021</p>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/60eb0bacd6e7610a49aabaa3/1fab2b6ro';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-- >
+
 			</div>
 
 		</footer>
