--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,7 +1,11 @@
 <nav id='menu'>
   <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
   <ul>
-    <li><a href='/'>Home</a></li>
+    <li><a href="/"><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?" style="
+    width: auto;
+    height: 58px;
+"></a></li>
+    <li><a href='/user/@me'>Home</a></li>
     <li><a href='/bots'>Bots</a></li>
     <li><a href='/bots'>Search</a></li>
     <li><a href='/invite'>Discord</a></li>
@@ -12,3 +16,4 @@
    <% } %>
   </ul>
 </nav>
+<br><Br><br>
