--- a/views/me.ejs
+++ b/views/me.ejs
@@ -18,8 +18,8 @@
   <body><br><br><br>
     <center><img src="https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>" class="rounded" alt="..."></center>
     <center><h1><%= user.username %>#<%= user.discriminator %></h1></center><br>
-    <center><a class="btn btn-primary" href="/addbot" role="button">Add Bot</a></center><br><br>
-    <center><a class="btn btn-primary" href="/" role ="button">Return Home</a></center><br><br>
+    <center><button class="button-main"><a   href="/addbot" role="button">Add Bot</a></button></center><br><br>
+    <center><button class="button-main"><a   href="/" role ="button">Return Home</a></button></center><br><br>
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <% bots.forEach(function(bot) { %>
     <div class="col">
@@ -28,13 +28,12 @@
         <img src="<%= bot.botavatar %>"><br>
           <h3 class="card-title"><%= bot.botname %></h3>
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href="/bot/<%= bot.botid %>" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">View</a>
-            <a href="/bot/<%= bot.botid %>/edit" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Edit</a>
-            <a href="/bot/<%= bot.botid %>/delete" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Delete</a></div>
+            <button class="button-main"><a href="/bot/<%= bot.botid %>" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">View</a></button>
+            <button class="button-main"><a href="/bot/<%= bot.botid %>/edit" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Edit</a></button>
+            <button class="button-main"><a href="/bot/<%= bot.botid %>/delete" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Delete</a></button></div>
         </div>
       </div>
     </div>
     <% }); %>
    </div><br><br>
-  </body>
-</html>
+ <%- include('./templates/footer.ejs') %> 
