--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -25,9 +25,18 @@
 
           <a href="/login">Add your Bot</a>
 				</p>
-
+        <div style="text-align:center" class="marginadd">
+        <a href="https://github.com/Discord-Lists/Privacy-Policy">Privacy Policy</a>
+        <a href="https://github.com/Discord-Lists/Terms-Of-Service">&nbsp; TOS</a>
+        </div><Br>
 				<p id="copyright">Discord Lists &copy; 2021</p>
-<!--Start of Tawk.to Script-->
+
+
+			</div>
+
+		</footer>
+
+    
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -39,8 +48,3 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
-<!--End of Tawk.to Script-- >
-
-			</div>
-
-		</footer>
