--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -5,15 +5,62 @@
     width: auto;
     height: 58px;
 "></a></li>
-    <li><a href='/user/@me'>Home</a></li>
+    <li><a href='/user/@me'>Profile</a></li>
     <li><a href='/bots'>Bots</a></li>
     <li><a href='/bots'>Search</a></li>
     <li><a href='/invite'>Discord</a></li>
     <% if(login_logout){ %>
-          <li><a href='/logout'>Logout</a></li>
+          <li style="float:right; margin-right:30px"><a href='/logout'>Logout</a></li>
           <% } else{ %>  
-          <li><a href='/login'>Login</a></li>
+          <li style="float:right; margin-right:30px"><a href='/login'>Login</a></li>
    <% } %>
   </ul>
 </nav>
+
+<!-- Cookie Popup -->
+<div class="cookie-popup cookie-popup--short cookie-popup--dark">
+    
+    <div>
+    This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://github.com/discord-lists/privacy-Policy" target="_blank">use of cookies</a>
+    </div>
+    <div class="cookie-popup-actions">
+      <button>Okay</button>
+    </div>
+
+  </div>
+  <Script>
+  /* common fuctions */
+function el(selector) { return document.querySelector(selector) }
+function els(selector) { return document.querySelectorAll(selector) }
+function on(selector, event, action) { els(selector).forEach(e => e.addEventListener(event, action)) }
+function cookie(name) { 
+  let c = document.cookie.split('; ').find(cookie => cookie && cookie.startsWith(name+'='))
+  return c ? c.split('=')[1] : false; 
+}
+
+
+/* popup button hanler */
+on('.cookie-popup button', 'click', () => {
+  el('.cookie-popup').classList.add('cookie-popup--accepted');
+  document.cookie = `cookie-accepted=true`
+});
+
+/* popup init hanler */
+if (cookie('cookie-accepted') !== "true") {
+  el('.cookie-popup').classList.add('cookie-popup--not-accepted');
+}
+
+
+
+/* page buttons handlers */
+
+function _reset() {
+  document.cookie = 'cookie-accepted=false'; 
+  document.location.reload();
+}
+
+function _switchMode(cssClass) {
+  el('.cookie-popup').classList.toggle(cssClass);
+}
+  </Script
 <br><Br><br>
