lots of minor changes and additions

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -59,9 +59,11 @@
         </div><br>
         <div class="col-md-4">
             <label for="validationCustom01" class="form-label">Invite URL. *</label>
-            <input type="text" class="form-control" name="invite" id="validationCustom01" placeholder="discord.com/oath/blahblah" required>
+            <input type="text" class="form-control" name="invite" id="validationCustom01" placeholder="discord.com/oath/" required>
         </div><br>
-        <div class="col-12">
+        <div class="col-12" style="
+    display: flex;
+    justify-content: center;">
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
             <label class="form-check-label" for="invalidCheck">
@@ -72,7 +74,9 @@
             </div>
           </div>
         </div><br>
-        <div class="col-12">
+        <div class="col-12" style="
+    display: flex;
+    justify-content: center;">
           <button class="button-main" type="submit">Submit form</button>
         </div><br>
         <h6>* = Required</h6>
