--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -63,8 +63,8 @@
             <label for="validationCustom01" class="form-label">Invite URL. *</label>
             <input type="text" class="form-control" name="invite" id="validationCustom01" value="<%= botid.invite %>" required>
         </div><br>
-        <div class="col-12">
-          <button class="btn btn-primary" type="submit">Edit</button>
+        <div class="col-12" style="display:flex; align-items:center; justify-content: center;">
+          <button class="button-main" type="submit">Edit</button>
         </div><br>
         <h6>* = Required</h6>
       </form>
