--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,11 +284,20 @@ transform: translate(10%,-110%)
 	#menu input:checked + label {color:white}
 	#menu input:checked + label:before {content:"\00d7"}
 	#menu input:checked ~ ul {display:block}
+  .login_logout{float:none;}
 }
-  
 
+.login_logout{
+  float:right !important;
+  margin-right:30px !important;
+}
+footer a{
+  color: #fff;
+  text-decoration: none;
+}
 
 .footer-distributed {
+  color:#fff;
   background-color: #232323;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
@@ -421,13 +430,14 @@ justify-content: center;
 
 
     body::-webkit-scrollbar {
-  width: 5px;               /* width of the entire scrollbar */
+  width: 7px;               /* width of the entire scrollbar */
 }
 body::-webkit-scrollbar-track {
   background: var(--secondary);        /* color of the tracking area */
 }
 body::-webkit-scrollbar-thumb {
-  background-color: var(--main-bg-color);    /* color of the scroll thumb */
+  background-color: var(--main-bg-color);
+  border-radius: 4px;    /* color of the scroll thumb */
 
 }
 
@@ -493,4 +503,92 @@ body::-webkit-scrollbar-thumb {
 @keyframes cookie-popup-in {
   from { bottom: -6.25rem; }
   to { bottom: 1.25rem; }
+}
+
+a{
+  text-decoration: none;
+}
+a:hover{
+  color: #fff;
+}
+
+
+
+
+
+
+
+/*FORMS*/
+.form-container {
+  display: grid;
+  font-family: Roboto;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased; }
+
+* {
+  box-sizing: border-box; }
+
+.inp {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+  border-radius: 3px;
+  overflow: hidden; }
+  .inp .label {
+    position: absolute;
+    top: 20px;
+    left: 12px;
+    font-size: 16px;
+    color: #232323;
+    font-weight: 500;
+    transform-origin: 0 0;
+    transform: translate3d(0, 0, 0);
+    transition: all .2s ease;
+    pointer-events: none; }
+  .inp .focus-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #232323;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left; }
+  .inp input {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 0;
+    font-family: inherit;
+    padding: 16px 12px 0 12px;
+    height: 56px;
+    font-size: 16px;
+    font-weight: 400;
+    background: #232323;
+    box-shadow: inset 0 -1px 0 #232323;
+    color: #232323;
+    transition: all .15s ease; }
+    .inp input:hover {
+      background: #232323;
+      box-shadow: inset 0 -1px 0 #232323; }
+    .inp input:not(:placeholder-shown) + .label {
+      color: #232323;
+      transform: translate3d(0, -12px, 0) scale(0.75); }
+    .inp input:focus {
+      background: #232323;
+      outline: none;
+      box-shadow: inset 0 -2px 0 #FC6B29; }
+      .inp input:focus + .label {
+        color: #FC6B29;
+        transform: translate3d(0, -12px, 0) scale(0.75); }
+        .inp input:focus + .label + .focus-bg {
+          transform: scaleX(1);
+          transition: all .1s ease; }
+
+.center-flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
