--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -1,7 +1,6 @@
  <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
 
-<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -13,6 +12,7 @@
     <%- include("templates/header") %>
 
     <title>Discord Lists | <%= botid.botname %></title>
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   </head>
   <body>
     
@@ -33,7 +33,7 @@
       <div class="alert alert-danger d-flex align-items-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
         <div>
-          This bot is not verified by reviewers yet. Because of that this bot will not show on the list.
+          This bot is not verified by our reviewers yet.
         </div>
       </div>
     <% } %>
@@ -58,6 +58,18 @@
           <%= deslong %>
         </div>
       </div><br><br><br>
+
+      <section class="text-gray-600 body-font">
+  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+    <img alt="hero" src="<%=botid.botavatar%>">
+    <div class="text-center lg:w-2/3 w-full">
+      <h1 class="flex justify-center title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"><%=botid.botname%><% if(botid.certification === 'certified') { %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" height="45" width="60"><% } %></h1>
+      <p class="mb-8 leading-relaxed"><%=deslong%></p>
+      <div class="flex justify-center">
+        <a><button class="button-main">Vote</button></a>
+        <a href="<%=botid.invite%>" class="underline"><button class="button-main" style="background:none !important ;color:var(--main-bg-color);font-weight:bold;">Invite</button></a>
+      </div>
+    </div>
+  </div>
+</section>
        <%- include('./templates/footer.ejs') %>
-  </body>
-</html>
