--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -15,23 +15,24 @@
     <title>Discord Lists | Deleting <%= botid.botname %></title>
   </head>
   <body>
-    <u><center><h1>Your are going to delete <%= botid.botname %> bot</h1></center></u><br><br><br><br><br><br><br><br>
+    <center><h1>Deleting <%= botid.botname %> </h1></center><br><br>
+    <div class="center-flex"><img src="<%=botid.botavatar %>"/></div>
+    <Br>
+    <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <center><form class="needs-validation" method="POST" action="/bot/delete/<%= botid.botid %>" novalidate>
         <div class="col-md-4">
-          <label for="validationCustom01" class="form-label">Please Type <b>DELETE</b> in the text area to delete the bot</label>
+          <label for="validationCustom01" class="form-label">            This action is irreversible. You will have to add your bot again if you wish to undo. Type <b>DELETE</b> below to Confirm.</label>
           <input type="text" class="form-control" name="DELETE" id="validationCustom01" placeholder="DELETE" required>
           <div class="invalid-feedback">
-            You must type <b>DELETE</b> in the text area if you want to delete the bot
+          Type DELETE to confirm.
           </div>
         </div><br>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">I Understand And Delete</button>
-          <a class="btn btn-primary" href="/bot/<%= botid.botid %>" role="button">Cancel</a>
+          <button class="button-main" type="submit">Confirm Delete</button>
+          <a href="/bot/<%= botid.botid %>"><button class="button-main">Cancel</button></a>
         </div><br>
       </form></center>
-  </body>
-</html>
 
 <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -55,3 +56,4 @@
     })
 })()
 </script>
+ <%- include('./templates/footer.ejs') %> 
