--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,11 @@
 <br><br><Br>
 
     <h2 class="heading">Certified Bots</h2><br><br>
-    <div class="container">
      <% if(certified_bots.length === 0){ %>
         <h3>No Certified Bots found. Please visit us later.</h3>
       <% } else{ %>
       <% certified_bots.forEach(function(bot) { %>
+    <div class="container">
       <div class="card">
         <div class="imgBx">
           <img src="<%= bot.botavatar %>">
@@ -26,16 +26,18 @@
           <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
         </div>
       </div>
+    </div>
+    <br><Br>
               <% }); %>
      <% } %>
-    </div>
+
 <br><br><br><br><br>
     <h2 class="heading">Other Bots</h2><br><br>
-  <div class="container">
      <% if(verified_bots.length === 0){ %>
         <h3>No Bots found. Please visit us later.</h3>
       <% } else{ %>
       <% verified_bots.forEach(function(bot) { %>
+    <div class="container">
       <div class="card">
         <div class="imgBx">
           <img src="<%= bot.botavatar %>">
@@ -48,16 +50,17 @@
           <a href="<%= bot.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
         </div>
       </div>
+    </div>
+    <br><Br>
               <% }); %>
      <% } %>
-    </div>
 <br><br><br><br><br>
     <h2 class="heading">Random Bots</h2><br><br>
-  <div class="container">
      <% if(random_bot.length === 0){ %>
         <h3>No Bots found. Please visit us later.</h3>
       <% } else{ %>
       <% random_bot.forEach(function(random) { %>
+    <div class="container">
       <div class="card">
         <div class="imgBx">
           <img src="<%= random.botavatar %>">
@@ -70,9 +73,10 @@
           <a href="<%= random.invite %>" class="invitebot"><button class="button-main">Invite</button></a>
         </div>
        </div>
+      </div><br><Br>
       <% }); %>
      <% } %>
-    </div>
+
 <br><br><br><br><hr><br>
       
  <%- include('./templates/footer.ejs') %> 
