--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -9,10 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
   <link rel="shortcut icon" href="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2Flogo.png?v=1621028854108" style="border-radius: 80px;" type="image/x-icon">
-  <link rel="stylesheet" href="/css/main.css" />
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+<!--Main CSS files -->
+  <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/responsive.css" />
      <title>Discord Lists</title>
 </head>
 <body>
